name:                ethereumhs-util
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aupiff/ethereumhs-util#readme
license:             BSD3
license-file:        LICENSE
author:              Roy Blankman
maintainer:          riblankman@gmail.com
copyright:           2017 Roy Blankman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Ethereum.Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , base16-bytestring
                     , cryptonite
                     , MissingH
                     , secp256k1
                     , text
                     , word8
  default-language:    Haskell2010

test-suite ethereumhs-util-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ethereumhs-util
                     , base16-bytestring
                     , bytestring
                     , cereal
                     , entropy
                     , HUnit
                     , mtl
                     , QuickCheck
                     , secp256k1
                     , string-conversions
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aupiff/ethereumhs-util
